# apps/api/src/modules/invitation/invitation.module.ts
@@ -1,5 +1,6 @@
-import { Module } from '@nestjs/common';
+import { Logger, Module } from '@nestjs/common';
 import { TypeOrmModule } from '@nestjs/typeorm';
+import { ProjectModule } from '../project/project.module';
 import { TeamModule } from '../team/team.module';
 import { TeamService } from '../team/team.service';
 import { UserModule } from '../user/user.module';
@@ -9,8 +10,8 @@ import { Invitation } from './invitation.entity';
 import { InvitationService } from './invitation.service';
 
 @Module({
-  imports: [TypeOrmModule.forFeature([Invitation]), TeamModule, UserModule],
+  imports: [TypeOrmModule.forFeature([Invitation]), ProjectModule, TeamModule, UserModule],
   controllers: [InvitationController],
-  providers: [InvitationService, TeamService, UserService],
+  providers: [Logger, InvitationService, TeamService, UserService],
 })
 export class InvitationModule {}
